# libdmixx

./: .gitignore  CMakeLists.txt
doc/: index.adoc  intro.adoc
include/dmi/: context.h  entry.h  table.h  types.h  version.h
include/dmi/table/: additional-info.h  baseboard.h  bios-language.h  bios.h  boot-integrity.h  cache.h  chassis.h  cooling-device.h  current-probe.h  firmware.h  group-assoc.h  hardware-security.h  ipmi-device.h  memory-array-mapped-addr.h  memory-channel.h  memory-controller.h  memory-device-mapped-addr.h  memory-device.h  memory-error-32bit.h  memory-error-64bit.h  memory-module.h  memory-phys-array.h  mgmt-device-component.h  mgmt-device-threshold.h  mgmt-device.h  oem-strings.h  onboard-device-ex.h  onboard-device.h  oob-remote-access.h  pointing-device.h  port-connector.h  portable-battery.h  power-supply.h  probe.h  processor-ex.h  processor.h  system-boot.h  system-config.h  system-event-log.h  system-power-controls.h  (+6 more)
src/: context.cc  dump.cc  entry.cc  table.cc  version.cc
src/table/: cache.cc  chassis.cc  cooling-device.cc  probe.cc  system.cc
